# TeXworks

./: .gitignore  CMakeLists.txt  PDFViewer.cpp  README.md
CMake/packaging/mac/: homebrew-poppler.patch  poppler.rb
cmake/packaging/mac/: poppler.rb
lib-patches/: poppler-debug-mac-font-handling.patch  poppler-debug.patch  poppler-mac-font-handling.patch  poppler-mac-remove-iconv.patch
modules/QtPDF/src/: PDFBackend.h
plugins-src/TWCoffeeScriptPlugin/: CMakeLists.txt  TWCoffeeScriptPlugin.cpp  TWCoffeeScriptPlugin.h  TWCoffeeScriptPlugin.qrc
src/: PDFBackend.cpp  PDFBackend.h  PDFDocument.cpp  PDFDocumentView.cpp  PDFDocumentView.h  TWApp.cpp  TWApp.h  TWScriptable.cpp  TWUtils.cpp  TWUtils.h  TeXDocument.cpp
src/backends/: PopplerBackend.cpp  PopplerBackend.h
